; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_cliprdr.c_cliprdr_send_simple_native_format_announce.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/extr_cliprdr.c_cliprdr_send_simple_native_format_announce.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [44 x i8] c"cliprdr_send_simple_native_format_announce\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cliprdr_send_simple_native_format_announce(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [36 x i32], align 16
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call i32 @DEBUG_CLIPBOARD(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0))
  %7 = getelementptr inbounds [36 x i32], [36 x i32]* %5, i64 0, i64 0
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @buf_out_uint32(i32* %7, i32 %8)
  %10 = getelementptr inbounds [36 x i32], [36 x i32]* %5, i64 0, i64 0
  %11 = getelementptr inbounds i32, i32* %10, i64 4
  %12 = call i32 @memset(i32* %11, i32 0, i32 140)
  %13 = load i32*, i32** %3, align 8
  %14 = getelementptr inbounds [36 x i32], [36 x i32]* %5, i64 0, i64 0
  %15 = call i32 @cliprdr_send_native_format_announce(i32* %13, i32* %14, i32 144)
  ret void
}

declare dso_local i32 @DEBUG_CLIPBOARD(i8*) #1

declare dso_local i32 @buf_out_uint32(i32*, i32) #1

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @cliprdr_send_native_format_announce(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
